varios-metodo scan

--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,10 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "angularx-qrcode",
+              "qrcode"
+           ],
             "outputPath": "www",
             "index": "src/index.html",
             "main": "src/main.ts",
